syntax = "proto3";

option csharp_namespace = "Normalization.Server";

package normalization;

service Normalization {
  rpc Normalize(DatabaseRecord) returns (NormalizationReply);
}

message DatabaseRecord {
  string user_login = 1;
  string user_password = 2;
  string playlist_name = 3;
  string playlist_description = 4;
  string artist_name = 5;
  string artist_description = 6;
  string album_name = 7;
  int32 album_rating = 8;
  string song_name = 9;
  int32 song_duration = 10;
  int32 plays_number = 11;
}

message NormalizationReply {
  bool is_successful = 1;
}